# LasCorto

./: .gitignore  CMakeLists.txt  README.md  build.bat  conanfile.txt  output.lascorto
corto/: CMakeLists.txt
corto/include/corto/: cstream.h  vertex_attribute.h
corto/src/: decoder.cpp
